# wasi-nn-safe

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
src/: error.rs  graph.rs  lib.rs  tensor.rs
src/error/: mod.rs  wasi_nn_backend_error.rs
src/syscall/: mod.rs  wasm32_wasi.rs
src/utils/: shared_slice.rs
tests/: common.rs  test_custom_tensor.rs  test_inference.rs
